@@ -372,6 +372,19 @@ $(document).ready(function() {
 		<h2  data-i18n="Year">Year</h2>
 		<div id="yeargraph" style="height: 300px;"></div>
 	</div>
+	<div id="dayweekmonthyearlog" style="display:none;">
+		<h2 data-i18n="Day">Day</h2>
+		<div id="daygraph" style="height: 180px;"></div>
+		<br>
+		<h2 data-i18n="Week">Week</h2>
+		<div id="weekgraph" style="height: 300px;"></div>
+		<br>
+		<h2 data-i18n="Month">Month</h2>
+		<div id="monthgraph" style="height: 300px;"></div>
+		<br>
+		<h2  data-i18n="Year">Year</h2>
+		<div id="yeargraph" style="height: 300px;"></div>
+	</div>
 	 <div id="windlog" style="display:none;">
 		<h2 data-i18n="Day">Day</h2>
 		<div id="winddaygraph" style="height: 300px;"></div>
