@@ -32,6 +32,7 @@ Version 1.0.xxx (Oktober xxth 2013)
 - Implemented: Added otherdevices_winddir to Lua scripts
 - Implemented: Added otherdevices_windspeed to Lua scripts
 - Implemented: Added otherdevices_windgust to Lua scripts
+- Implemented: Rain, Short Log in graph
 
 
 Version 1.0.1087 (Oktober 16th 2013)
